Started working on home component

--- a/SpaClient/src/app/home/home.component.html
+++ b/SpaClient/src/app/home/home.component.html
@@ -1,3 +1,28 @@
-<p>
-  home works!
-</p>
+<div class="landing">
+  <div class="content">
+    <h1>Kolaborate</h1>
+    <hr>
+    <h5>Kolaborate is the project management tool for various teams</h5>
+    <button class="btn btn-success" (click)="login()">Get started now</button>
+  </div>
+</div>
+<div class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Not just for developers</h3>
+        <hr>
+        <p>You don't need to be an expert developer to harness the user friendly simplicity and flexibility of Kolaborate.</p>
+      </div>
+      <div class="col-md-4">
+        <h3>Easy to use</h3>
+        <hr>
+      </div>
+      <div class="col-md-4">
+        <h3>Transparent execution</h3>
+        <hr>
+        <p>Whether your team is across the table or around the world, Kolaborate brings a new level of transparency to your team's work and keeps everyone on the same page.</p>
+      </div>
+    </div>
+  </div>
+</div>
