--- a/SpaClient/src/app/account/account.component.html
+++ b/SpaClient/src/app/account/account.component.html
@@ -1,216 +1,217 @@
-<!-- <div class="container">
-</div> -->
-<h2>Account settings</h2>
-<form [formGroup]="userSettingsForm">
-  <!-- Username -->
-  <div class="row">
-    <div class="col-sm-1">
-      <label class="col-form-label">Username: </label>
-    </div>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <fa-icon [icon]="['fas', 'at']"></fa-icon>
-          </div>
-        </div>
-        <input 
-          type="text" 
-          class="form-control" 
-          formControlName="username" 
-          placeholder="Username">
+<div class="container">
+  <h2>Account settings</h2>
+  <form [formGroup]="userSettingsForm">
+    <!-- Username -->
+    <div class="row">
+      <div class="col-sm-1">
+        <label class="col-form-label">Username: </label>
       </div>
-    </div>
-  </div>
-
-  <!-- Full name -->
-  <div class="row">
-    <div class="col-sm-1">
-      <label class="col-form-label">Full name: </label>
-    </div>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <fa-icon [icon]="['fas', 'user']"></fa-icon>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text">
+              <fa-icon [icon]="['fas', 'at']"></fa-icon>
+            </div>
           </div>
-        </div>
-        <input 
-          type="text" 
-          class="form-control" 
-          formControlName="fullName" 
-          placeholder="Full name">
-      </div>
-    </div>
-  </div>
-
-  <!-- Avatar -->
-  <div class="row">
-    <div class="col-sm-1">
-      <label class="col-form-label">Avatar: </label>
-    </div>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <fa-icon [icon]="['fas', 'user-circle']"></fa-icon>
-          </div>
-        </div>
-        <div class="custom-file">
           <input 
-            type="file"
-            (change)="fileChangeEvent($event)" 
-            class="custom-file-input" 
-            formControlName="avatar"
-            aria-describedby="avatar">
-          <label class="custom-file-label" for="avatar">{{getImageName()}}</label>
+            type="text" 
+            class="form-control" 
+            formControlName="username" 
+            placeholder="Username">
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="row" *ngIf="croppedImagePreview !== ''">
-    <div class="col-sm-1">
-      <label class="col-form-label">Avatar preview: </label>
+    <!-- Full name -->
+    <div class="row">
+      <div class="col-sm-1">
+        <label class="col-form-label">Full name: </label>
+      </div>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text">
+              <fa-icon [icon]="['fas', 'user']"></fa-icon>
+            </div>
+          </div>
+          <input 
+            type="text" 
+            class="form-control" 
+            formControlName="fullName" 
+            placeholder="Full name">
+        </div>
+      </div>
     </div>
-    <div class="col-sm-3">
-      <img [src]="croppedImagePreview" />
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-sm-3 offset-sm-1">
-      <button 
-        class="btn btn-block btn-primary"
-        type="button"
-        (click)="showModal(passwordModal)"
-        [disabled]="!isSaveSettingsButtonEnabled()">Save settings</button>
-    </div>
-  </div>
-</form>
-
-<h5 class="password-header">Change your password</h5>
-<form [formGroup]="passwordForm" (ngSubmit)="changePassword()">
-  <!-- Current password -->
-  <div class="row">
-    <div class="col-sm-1">
-      <label class="col-form-label">Current Password: </label>
-    </div>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <fa-icon [icon]="['fas', 'user-lock']"></fa-icon>
+    <!-- Avatar -->
+    <div class="row">
+      <div class="col-sm-1">
+        <label class="col-form-label">Avatar: </label>
+      </div>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text">
+              <fa-icon [icon]="['fas', 'user-circle']"></fa-icon>
+            </div>
+          </div>
+          <div class="custom-file">
+            <input 
+              type="file"
+              (change)="fileChangeEvent($event)" 
+              class="custom-file-input" 
+              formControlName="avatar"
+              aria-describedby="avatar">
+            <label class="custom-file-label" for="avatar">{{getImageName()}}</label>
           </div>
         </div>
-        <input 
-          formControlName="currentPassword"
-          type="password" 
-          class="form-control" 
-          placeholder="Current password">
       </div>
     </div>
-  </div>
-  <!-- New Password -->
-  <div class="row">
-    <div class="col-sm-1">
-      <label class="col-form-label">New Password: </label>
-    </div>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <fa-icon [icon]="['fas', 'lock']"></fa-icon>
-          </div>
-        </div>
-        <input 
-          formControlName="newPassword"
-          type="password" 
-          class="form-control" 
-          placeholder="New password">
-      </div>
-    </div>
-  </div>
-  <!-- Confirm new password -->
-  <div class="row">
-    <div class="col-sm-1">
-      <label class="col-form-label">Confirm password: </label>
-    </div>
-    <div class="col-sm-3">
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <fa-icon [icon]="['fas', 'lock']"></fa-icon>
-          </div>
-        </div>
-        <input 
-          formControlName="confirmNewPassword"
-          type="password" 
-          class="form-control" 
-          placeholder="Confirm password">
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="offset-sm-1 col-sm-3">
-      <button 
-        class="btn btn-block btn-success"
-        type="submit"
-        [disabled]="!passwordForm.valid">
-          Update password
-      </button>
-    </div>
-  </div>
-</form>
 
-<!-- Image cropping modal -->
-<div class="modal fade" 
-     bsModal 
-     #cropModal="bs-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title pull-left">Crop your image</h5>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal(cropModal)">
-          <span aria-hidden="true">&times;</span>
+    <div class="row" *ngIf="croppedImagePreview !== ''">
+      <div class="col-sm-1">
+        <label class="col-form-label">Avatar preview: </label>
+      </div>
+      <div class="col-sm-3">
+        <img [src]="croppedImagePreview" />
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-3 offset-sm-1">
+        <button 
+          class="btn btn-block btn-primary"
+          type="button"
+          (click)="showModal(passwordModal)"
+          [disabled]="!isSaveSettingsButtonEnabled()">Save settings</button>
+      </div>
+    </div>
+  </form>
+
+  <h5 class="password-header">Change your password</h5>
+  <form [formGroup]="passwordForm" (ngSubmit)="changePassword()">
+    <!-- Current password -->
+    <div class="row">
+      <div class="col-sm-1">
+        <label class="col-form-label">Current Password: </label>
+      </div>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text">
+              <fa-icon [icon]="['fas', 'user-lock']"></fa-icon>
+            </div>
+          </div>
+          <input 
+            formControlName="currentPassword"
+            type="password" 
+            class="form-control" 
+            placeholder="Current password">
+        </div>
+      </div>
+    </div>
+    <!-- New Password -->
+    <div class="row">
+      <div class="col-sm-1">
+        <label class="col-form-label">New Password: </label>
+      </div>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text">
+              <fa-icon [icon]="['fas', 'lock']"></fa-icon>
+            </div>
+          </div>
+          <input 
+            formControlName="newPassword"
+            type="password" 
+            class="form-control" 
+            placeholder="New password">
+        </div>
+      </div>
+    </div>
+    <!-- Confirm new password -->
+    <div class="row">
+      <div class="col-sm-1">
+        <label class="col-form-label">Confirm password: </label>
+      </div>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text">
+              <fa-icon [icon]="['fas', 'lock']"></fa-icon>
+            </div>
+          </div>
+          <input 
+            formControlName="confirmNewPassword"
+            type="password" 
+            class="form-control" 
+            placeholder="Confirm password">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="offset-sm-1 col-sm-3">
+        <button 
+          class="btn btn-block btn-success"
+          type="submit"
+          [disabled]="!passwordForm.valid">
+            Update password
         </button>
       </div>
-      <div class="modal-body text-center">
-        <image-cropper
-            [imageChangedEvent]="imageChangedEvent"
-            [maintainAspectRatio]="true"
-            [aspectRatio]="1 / 1"
-            format="png"
-            (imageCropped)="imageCropped($event)"
-            (imageLoaded)="imageLoaded()"
-            (cropperReady)="cropperReady()"
-            (loadImageFailed)="loadImageFailed()"></image-cropper>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-outline-success" (click)="cropImage()">Save</button>
-      </div>
     </div>
-  </div>   
-</div>
+  </form>
 
-<!-- Password modal -->
-<div class="modal fade" 
-     bsModal 
-     #passwordModal="bs-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title pull-left">Please enter your password</h5>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal(passwordModal)">
-          <span aria-hidden="true">&times;</span>
-        </button>
+  <!-- Image cropping modal -->
+  <div class="modal fade" 
+      bsModal 
+      #cropModal="bs-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title pull-left">Crop your image</h5>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal(cropModal)">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-center">
+          <image-cropper
+              [imageChangedEvent]="imageChangedEvent"
+              [maintainAspectRatio]="true"
+              [aspectRatio]="1 / 1"
+              format="png"
+              (imageCropped)="imageCropped($event)"
+              (imageLoaded)="imageLoaded()"
+              (cropperReady)="cropperReady()"
+              (loadImageFailed)="loadImageFailed()"></image-cropper>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-outline-success" (click)="cropImage()">Save</button>
+        </div>
       </div>
-      <div class="modal-body text-center">
-        <input type="password" class="form-control" placeholder="Password" [(ngModel)]="password">
+    </div>   
+  </div>
+
+  <!-- Password modal -->
+  <div class="modal fade" 
+      bsModal 
+      #passwordModal="bs-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title pull-left">Please enter your password</h5>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal(passwordModal)">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-center">
+          <input type="password" class="form-control" placeholder="Password" [(ngModel)]="password">
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-outline-success" (click)="submitUserSettingsForm()">Save</button>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button class="btn btn-outline-success" (click)="submitUserSettingsForm()">Save</button>
-      </div>
-    </div>
-  </div>   
-</div>
+    </div>   
+  </div>
+  
+</div>  
