--- a/SpaClient/src/app/projects/project-detail/project-detail.component.html
+++ b/SpaClient/src/app/projects/project-detail/project-detail.component.html
@@ -1,256 +1,258 @@
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item" aria-current="page"><a [routerLink]="['/projects']">Projects</a></li>
-    <li class="breadcrumb-item active" aria-current="page">{{project.name}}</li>
-  </ol>
-</nav>
+<div class="container">  
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item" aria-current="page"><a [routerLink]="['/projects']">Projects</a></li>
+      <li class="breadcrumb-item active" aria-current="page">{{project.name}}</li>
+    </ol>
+  </nav>
 
-<div class="row">
-  <div class="col-md-10">
-    <h3>{{project.name}} board</h3>
-  </div>
-  <div class="col-md-2">
-    <div class="project-options">
-      <!-- <button class="btn"><fa-icon [icon]="['far', 'star']" size="lg"></fa-icon></button> -->
-      <div class="btn-group" dropdown placement="bottom right" *ngIf="currentUserRole === 'manager'">
-        <button id="project-options-button" dropdownToggle type="button" class="btn" aria-controls="dropdown-animated">
-          <fa-icon [icon]="['fas', 'cog']" size="lg"></fa-icon>
-        </button>
-        <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="project-options-button">
-          <li role="menuitem">
-            <a class="dropdown-item" 
-               (click)="dragModeEnabled = !dragModeEnabled">{{dragModeEnabled ? 'Disable' : 'Enable'}} drag mode</a>
-          </li>
-          <li role="menuitem">
-            <a class="dropdown-item" 
-               [routerLink]="['/projects', project.id, 'manage']">Manage project</a>
-          </li>
-          <li role="menuitem">
-            <a class="dropdown-item" 
-               (click)="openModal(editProjectModal)">Edit project</a>
-          </li>
-          <li role="menuitem">
-            <a class="dropdown-item" 
-               (click)="openModal(deleteModal)">Delete project</a>
-          </li>
-        </ul>
+  <div class="row">
+    <div class="col-md-10">
+      <h3>{{project.name}} board</h3>
+    </div>
+    <div class="col-md-2">
+      <div class="project-options">
+        <!-- <button class="btn"><fa-icon [icon]="['far', 'star']" size="lg"></fa-icon></button> -->
+        <div class="btn-group" dropdown placement="bottom right" *ngIf="currentUserRole === 'manager'">
+          <button id="project-options-button" dropdownToggle type="button" class="btn" aria-controls="dropdown-animated">
+            <fa-icon [icon]="['fas', 'cog']" size="lg"></fa-icon>
+          </button>
+          <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="project-options-button">
+            <li role="menuitem">
+              <a class="dropdown-item" 
+                (click)="dragModeEnabled = !dragModeEnabled">{{dragModeEnabled ? 'Disable' : 'Enable'}} drag mode</a>
+            </li>
+            <li role="menuitem">
+              <a class="dropdown-item" 
+                [routerLink]="['/projects', project.id, 'manage']">Manage project</a>
+            </li>
+            <li role="menuitem">
+              <a class="dropdown-item" 
+                (click)="openModal(editProjectModal)">Edit project</a>
+            </li>
+            <li role="menuitem">
+              <a class="dropdown-item" 
+                (click)="openModal(deleteModal)">Delete project</a>
+            </li>
+          </ul>
+        </div>
+
       </div>
-
     </div>
   </div>
-</div>
 
-<div class="row" *ngIf="project.startDate" id="project-dates">
-  <div class="col-md-10">
-    <fa-icon [icon]="['far', 'calendar-alt']" class="icon"></fa-icon>
-    <span id="start-date">{{printDate(project.startDate)}} - </span><span *ngIf="project.endDate">{{printDate(project.endDate)}}</span>
+  <div class="row" *ngIf="project.startDate" id="project-dates">
+    <div class="col-md-10">
+      <fa-icon [icon]="['far', 'calendar-alt']" class="icon"></fa-icon>
+      <span id="start-date">{{printDate(project.startDate)}} - </span><span *ngIf="project.endDate">{{printDate(project.endDate)}}</span>
+    </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-md-12">
-    <p [innerHTML]="project.description"></p>
+  <div class="row">
+    <div class="col-md-12">
+      <p [innerHTML]="project.description"></p>
+    </div>
   </div>
-</div>
 
-<div class="row" id="filter">
-  <div class="col-md-2">
-    <div class="inner-addon right-addon" tabindex="1"> 
-      <fa-icon [icon]="['fas', 'search']" class="icon"></fa-icon>
-      <input 
-        [(ngModel)]="searchTerm"
+  <div class="row" id="filter">
+    <div class="col-md-2">
+      <div class="inner-addon right-addon" tabindex="1"> 
+        <fa-icon [icon]="['fas', 'search']" class="icon"></fa-icon>
+        <input 
+          [(ngModel)]="searchTerm"
+          (input)="search($event)"
+          type="text"
+          name="searchTerm"
+          class="form-control" 
+          placeholder="Search" />
+      </div>
+    </div>
+    <div class="col-md-2 max-width-150">
+      <select 
+        [(value)]="issueType"
+        (input)="search($event)" 
+        name="issueType"
+        class="form-control">
+        <option value="" selected disabled hidden>Issue type</option>
+        <option value="task">Task</option>
+        <option value="bug">Bug</option>
+      </select>
+    </div>
+    <div class="col-md-2 max-width-150">
+      <select 
+        [(value)]="label"
         (input)="search($event)"
-        type="text"
-        name="searchTerm"
-        class="form-control" 
-        placeholder="Search" />
+        name="label"
+        class="form-control">
+        <option value="" selected disabled hidden>Label</option>
+        <option *ngFor="let l of labels" [value]="l.name">{{l.name}}</option>
+      </select>
+    </div>
+    <div id="invite" class="col-md-6" >
+      <button
+        *ngFor="let projectUser of project.projectUsers; let i = index"
+        class="btn"
+        [ngClass]="{
+          'btn-primary': projectUser.user.id === filterUserId,
+          'btn-default': projectUser.user.id !== filterUserId,
+          'margin-right-10': currentUserRole !== 'manager' && i === project.projectUsers.length - 1
+        }"
+        class="z-{{project.projectUsers.length - i}}"
+        tooltip="{{projectUser.user.fullName}}"
+        (click)="setFilterUserId(projectUser.user.id)">
+          {{getInitials(projectUser.user.fullName)}}
+      </button>
+      <button 
+        *ngIf="currentUserRole === 'manager'"
+        class="btn btn-default"
+        [ngClass]="{'margin-right-10': currentUserRole === 'manager'}"
+        id="invite-btn" 
+        (click)="openModal(inviteModal)"
+        tooltip="Add people">
+          <fa-icon [icon]="['fas', 'user-plus']" class="icon"></fa-icon>
+      </button>
+      <button 
+        class="btn btn-outline-warning" 
+        (click)="resetFilters()"
+        *ngIf="viewResetFilter()">Reset</button>
     </div>
   </div>
-  <div class="col-md-2 max-width-150">
-    <select 
-      [(value)]="issueType"
-      (input)="search($event)" 
-      name="issueType"
-      class="form-control">
-      <option value="" selected disabled hidden>Issue type</option>
-      <option value="task">Task</option>
-      <option value="bug">Bug</option>
-    </select>
-  </div>
-  <div class="col-md-2 max-width-150">
-    <select 
-      [(value)]="label"
-      (input)="search($event)"
-      name="label"
-      class="form-control">
-      <option value="" selected disabled hidden>Label</option>
-      <option *ngFor="let l of labels" [value]="l.name">{{l.name}}</option>
-    </select>
-  </div>
-  <div id="invite" class="col-md-6" >
-    <button
-      *ngFor="let projectUser of project.projectUsers; let i = index"
-      class="btn"
-      [ngClass]="{
-        'btn-primary': projectUser.user.id === filterUserId,
-        'btn-default': projectUser.user.id !== filterUserId,
-        'margin-right-10': currentUserRole !== 'manager' && i === project.projectUsers.length - 1
-      }"
-      class="z-{{project.projectUsers.length - i}}"
-      tooltip="{{projectUser.user.fullName}}"
-      (click)="setFilterUserId(projectUser.user.id)">
-        {{getInitials(projectUser.user.fullName)}}
-    </button>
-    <button 
-      *ngIf="currentUserRole === 'manager'"
-      class="btn btn-default"
-      [ngClass]="{'margin-right-10': currentUserRole === 'manager'}"
-      id="invite-btn" 
-      (click)="openModal(inviteModal)"
-      tooltip="Add people">
-        <fa-icon [icon]="['fas', 'user-plus']" class="icon"></fa-icon>
-    </button>
-    <button 
-      class="btn btn-outline-warning" 
-      (click)="resetFilters()"
-      *ngIf="viewResetFilter()">Reset</button>
-  </div>
-</div>
 
-<app-phase-list 
-  [project]="project"
-  [projectId]="project.id" 
-  [phases]="previewPhases"
-  [dragModeEnabled]="dragModeEnabled"
-  [currentUserRole]="currentUserRole"></app-phase-list>
+  <app-phase-list 
+    [project]="project"
+    [projectId]="project.id" 
+    [phases]="previewPhases"
+    [dragModeEnabled]="dragModeEnabled"
+    [currentUserRole]="currentUserRole"></app-phase-list>
 
-<!-- Invite modal -->
-<div class="modal fade" 
-     bsModal 
-     #inviteModal="bs-modal" 
-     (onHidden)="userFullNameSelected = ''">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title pull-left">Create a new phase</h5>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal(inviteModal)">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-md-12">
-            <label for="name">Name</label>
-            <input [(ngModel)]="userFullNameSelected"
-                   [typeahead]="users$"
-                   [typeaheadAsync]="true"
-                   [typeaheadItemTemplate]="itemTemplate"
-                   [isAnimated]="true"
-                   (typeaheadOnSelect)="typeaheadOnSelect($event)"
-                   typeaheadOptionField="fullName"
-                   typeaheadWaitMs="1000"
-                   type="text" 
-                   placeholder="Please enter user's full name" 
-                   class="form-control">
-          </div>
+  <!-- Invite modal -->
+  <div class="modal fade" 
+      bsModal 
+      #inviteModal="bs-modal" 
+      (onHidden)="userFullNameSelected = ''">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title pull-left">Create a new phase</h5>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal(inviteModal)">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-        <div class="row">
-          <div class="col-md-12">
-            <label for="">Role</label>
-            <select [(ngModel)]="selectedUserRole" class="form-control">
-              <option value="user">User</option>
-              <option value="manager">Manager</option>
-            </select>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <button class="btn btn-outline-success btn-block" 
-                    (click)="inviteUser()" 
-                    [disabled]="selectedUser === null">Invite</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<ng-template #itemTemplate let-model="item" let-index="index">
-  {{model.fullName}} <i>({{model.userName}})</i>
-</ng-template>
-
-<!-- Edit project modal -->
-<div class="modal fade" 
-     bsModal 
-     #editProjectModal="bs-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title pull-left">Edit {{project.name}}</h5>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal(editProjectModal)">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form [formGroup]="projectEditForm" (ngSubmit)="updateProject()">
-          <div class="form-group">
-            <label for="name">Project name</label>
-            <input type="text" class="form-control" placeholder="Project name" formControlName="name">
-          </div>
-          <div class="form-group">
-            <label for="description">Project description</label>
-            <textarea name="description" class="form-control" id="description" cols="30" rows="10" formControlName="description" placeholder="Enter project summary..."></textarea>
-          </div>
-        
-          <div class="row">
-            <div class="col-xs-12 col-md-6 form-group">
-              <label for="startDate">Project start date</label>
-              <input 
-                class="form-control"
-                placeholder="Select start date"
-                bsDatepicker
-                formControlName="startDate"
-                [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY.', isAnimated: true, containerClass: 'theme-dark-blue' }">
-            </div>
-            <div class="col-xs-12 col-md-6 form-group">
-              <label for="startDate">Project end date</label>
-              <input 
-                class="form-control"
-                placeholder="Select end date"
-                bsDatepicker
-                formControlName="endDate"
-                [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY.', isAnimated: true, containerClass: 'theme-dark-blue' }">
-            </div>
-          </div>
-          <hr>
+        <div class="modal-body">
           <div class="row">
             <div class="col-md-12">
-              <button class="btn btn-success btn-block" [disabled]="!projectEditForm.valid">Save changes</button>
+              <label for="name">Name</label>
+              <input [(ngModel)]="userFullNameSelected"
+                    [typeahead]="users$"
+                    [typeaheadAsync]="true"
+                    [typeaheadItemTemplate]="itemTemplate"
+                    [isAnimated]="true"
+                    (typeaheadOnSelect)="typeaheadOnSelect($event)"
+                    typeaheadOptionField="fullName"
+                    typeaheadWaitMs="1000"
+                    type="text" 
+                    placeholder="Please enter user's full name" 
+                    class="form-control">
             </div>
           </div>
-        </form>
+          <div class="row">
+            <div class="col-md-12">
+              <label for="">Role</label>
+              <select [(ngModel)]="selectedUserRole" class="form-control">
+                <option value="user">User</option>
+                <option value="manager">Manager</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <button class="btn btn-outline-success btn-block" 
+                      (click)="inviteUser()" 
+                      [disabled]="selectedUser === null">Invite</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- Delete project modal -->
-<div class="modal fade" 
-     bsModal 
-     #deleteModal="bs-modal">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title pull-left">Delete project</h5>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal(deleteModal)">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body text-center">
-        <p>Are you sure you want to delete this project?</p>
-        <button type="button" class="btn btn-outline-danger" (click)="deleteProject()">Yes</button>
-        <button type="button" class="btn btn-default" (click)="closeModal(deleteModal)">No</button>
+  <ng-template #itemTemplate let-model="item" let-index="index">
+    {{model.fullName}} <i>({{model.userName}})</i>
+  </ng-template>
+
+  <!-- Edit project modal -->
+  <div class="modal fade" 
+      bsModal 
+      #editProjectModal="bs-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title pull-left">Edit {{project.name}}</h5>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal(editProjectModal)">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="projectEditForm" (ngSubmit)="updateProject()">
+            <div class="form-group">
+              <label for="name">Project name</label>
+              <input type="text" class="form-control" placeholder="Project name" formControlName="name">
+            </div>
+            <div class="form-group">
+              <label for="description">Project description</label>
+              <textarea name="description" class="form-control" id="description" cols="30" rows="10" formControlName="description" placeholder="Enter project summary..."></textarea>
+            </div>
+          
+            <div class="row">
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="startDate">Project start date</label>
+                <input 
+                  class="form-control"
+                  placeholder="Select start date"
+                  bsDatepicker
+                  formControlName="startDate"
+                  [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY.', isAnimated: true, containerClass: 'theme-dark-blue' }">
+              </div>
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="startDate">Project end date</label>
+                <input 
+                  class="form-control"
+                  placeholder="Select end date"
+                  bsDatepicker
+                  formControlName="endDate"
+                  [bsConfig]="{ dateInputFormat: 'DD.MM.YYYY.', isAnimated: true, containerClass: 'theme-dark-blue' }">
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-md-12">
+                <button class="btn btn-success btn-block" [disabled]="!projectEditForm.valid">Save changes</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
-  </div>   
+  </div>
+
+  <!-- Delete project modal -->
+  <div class="modal fade" 
+      bsModal 
+      #deleteModal="bs-modal">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title pull-left">Delete project</h5>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal(deleteModal)">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-center">
+          <p>Are you sure you want to delete this project?</p>
+          <button type="button" class="btn btn-outline-danger" (click)="deleteProject()">Yes</button>
+          <button type="button" class="btn btn-default" (click)="closeModal(deleteModal)">No</button>
+        </div>
+      </div>
+    </div>   
+  </div>
 </div>
