Minor bug fixes; labels checked after creating an issue

--- a/SpaClient/src/app/home/home.component.html
+++ b/SpaClient/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <h1>Kolaborate</h1>
     <hr>
-    <h5>Kolaborate is the project management tool for various teams</h5>
+    <h5>Take your project management to the next level</h5>
     <button class="btn btn-success" (click)="login()">Get started now</button>
   </div>
 </div>
@@ -12,11 +12,12 @@
       <div class="col-md-4">
         <h3>Not just for developers</h3>
         <hr>
-        <p>You don't need to be an expert developer to harness the user friendly simplicity and flexibility of Kolaborate.</p>
+        <p>You don't need to be an expert developer to harness the user friendly simplicity and flexibility of Kolaborate. Kolaborate is easily adjustable to any kind of project.</p>
       </div>
       <div class="col-md-4">
         <h3>Easy to use</h3>
         <hr>
+        <p>Kolaborate is the project management tool for various teams. With its simple design, Kolaborate vastly improves your team's workflow and productivity.</p>
       </div>
       <div class="col-md-4">
         <h3>Transparent execution</h3>
